Fix bug 349695 by taking a different approach to setting display:none on HTML forms inside tables; this approach overrides author styles.  r+sr=dbaron