layout/style/nsCSSPseudoClassList.h
@@ -88,6 +88,9 @@ CSS_PSEUDO_CLASS(mozTypeUnsupported, ":-moz-type-unsupported")
 
 CSS_PSEUDO_CLASS(mozHasHandlerRef, ":-moz-has-handlerref")
 
+// Match nodes that are HTML but not XHTML
+CSS_PSEUDO_CLASS(mozIsHTML, ":-moz-is-html")
+
 // CSS 3 UI
 // http://www.w3.org/TR/2004/CR-css3-ui-20040511/#pseudo-classes
 CSS_PSEUDO_CLASS(required, ":required")
