layout/style/nsCSSRuleProcessor.cpp
@@ -1256,6 +1256,10 @@ static PRBool SelectorMatches(RuleProcessorData &data,
     else if (nsCSSPseudoClasses::mozReadWrite == pseudoClass->mAtom) {
       stateToCheck = NS_EVENT_STATE_MOZ_READWRITE;
     }
+    else if (nsCSSPseudoClasses::mozIsHTML == pseudoClass->mAtom) {
+      result = data.mIsHTMLContent &&
+        data.mContent->GetNameSpaceID() == kNameSpaceID_None;
+    }
     else {
       NS_ERROR("CSS parser parsed a pseudo-class that we do not handle");
       result = PR_FALSE;  // unknown pseudo class
