layout/style/nsHTMLStyleSheet.cpp
@@ -90,28 +90,7 @@ nsHTMLStyleSheet::HTMLColorRule::List(FILE* out, PRInt32 aIndent) const
 }
 #endif
 
-
-NS_IMPL_ISUPPORTS1(nsHTMLStyleSheet::TableFormRule, nsIStyleRule)
-
-NS_IMETHODIMP
-nsHTMLStyleSheet::TableFormRule::MapRuleInfoInto(nsRuleData* aRuleData)
-{
-  if (aRuleData->mSID == eStyleStruct_Display &&
-      aRuleData->mDisplayData->mDisplay.GetUnit() == eCSSUnit_Null) {
-    nsCSSValue none(NS_STYLE_DISPLAY_NONE, eCSSUnit_Enumerated);
-    aRuleData->mDisplayData->mDisplay = none;
-  }
-  return NS_OK;
-}
-
-#ifdef DEBUG
-NS_IMETHODIMP
-nsHTMLStyleSheet::TableFormRule::List(FILE* out, PRInt32 aIndent) const
-{
-  return NS_OK;
-}
-#endif
-
+ 
 NS_IMPL_ISUPPORTS1(nsHTMLStyleSheet::GenericTableRule, nsIStyleRule)
 
 NS_IMETHODIMP
@@ -352,8 +331,7 @@ nsHTMLStyleSheet::nsHTMLStyleSheet(void)
     mLinkRule(nsnull),
     mVisitedRule(nsnull),
     mActiveRule(nsnull),
-    mDocumentColorRule(nsnull),
-    mTableFormRule(nsnull)
+    mDocumentColorRule(nsnull)
 {
   mMappedAttrTable.ops = nsnull;
 }
@@ -385,11 +363,6 @@ nsHTMLStyleSheet::Init()
   if (!mTableTHRule)
     return NS_ERROR_OUT_OF_MEMORY;
   NS_ADDREF(mTableTHRule);
-
-  mTableFormRule = new TableFormRule();
-  if (!mTableFormRule)
-    return NS_ERROR_OUT_OF_MEMORY;
-  NS_ADDREF(mTableFormRule);
   return NS_OK;
 }
 
@@ -401,7 +374,6 @@ nsHTMLStyleSheet::~nsHTMLStyleSheet()
   NS_IF_RELEASE(mVisitedRule);
   NS_IF_RELEASE(mActiveRule);
   NS_IF_RELEASE(mDocumentColorRule);
-  NS_IF_RELEASE(mTableFormRule);
   NS_IF_RELEASE(mTableTbodyRule);
   NS_IF_RELEASE(mTableRowRule);
   NS_IF_RELEASE(mTableColgroupRule);
@@ -496,25 +468,6 @@ nsHTMLStyleSheet::RulesMatching(ElementRuleProcessorData* aData)
           }
           if (mDocumentColorRule)
             ruleWalker->Forward(mDocumentColorRule);
-        }
-      }
-      else if (tag == nsHTMLAtoms::form) {
-        // suppress in html documents empty forms inside tables, 
-        // they have been used as a hack
-        // to avoid the form top and bottom margin
-        nsIDocument* doc   = content->GetOwnerDoc();
-        nsIContent* parent = content->GetParent();
-        if (!content->GetChildCount() &&                       // form is empty
-            doc && !doc->IsCaseSensitive() &&          // document is not XHTML
-            parent && parent->IsNodeOfType(nsINode::eHTML)) { // parent is HTML
-          nsIAtom* parentTag = parent->Tag();
-          if ((nsHTMLAtoms::table == parentTag) ||
-              (nsHTMLAtoms::tr == parentTag) ||
-              (nsHTMLAtoms::tbody == parentTag) ||
-              (nsHTMLAtoms::thead == parentTag) ||
-              (nsHTMLAtoms::tfoot == parentTag)) {
-            ruleWalker->Forward(mTableFormRule); 
-          }
         }
       }
     } // end html element
@@ -707,7 +660,6 @@ nsHTMLStyleSheet::Reset(nsIURI* aURL)
   NS_IF_RELEASE(mVisitedRule);
   NS_IF_RELEASE(mActiveRule);
   NS_IF_RELEASE(mDocumentColorRule);
-  NS_IF_RELEASE(mTableFormRule);
 
   if (mMappedAttrTable.ops) {
     PL_DHashTableFinish(&mMappedAttrTable);
